--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,13 +1,17 @@
 version: 0.2
-os: linux
-files:
-     - source: /index.html
-       destination: /var/www/html/
-hooks:
-    BeforeInstall:
-        - location: install_httpd.sh
-          runas: root
+
+phases: 
+    build:
+        commands:
+            - echo "Build block"
+            - ls
+            - echo "Running tests to check if "Congratulations" present in index.html file"
+            - grep "Congratulations" index.html
+    post_build:
+        commands:
+            - echo "Post build phase"
 artifacts:
-  files:
-    - ‘**/*'
-          
+    files:
+        - index.html
+        - appspec.yml
+    discard-paths: yes
